# Digital-design-project-1

./: CMakeLists.txt  README.md  Report.md  example.sim  example.stim  example.v  main.cpp  simulator_gui.html  test1_inverter.stim  test1_inverter_expected.sim  test2_and_or.stim  test2_and_or.v  test3_xor_chain.stim  test3_xor_chain.v  test4_bufif1.stim  test5_mixed.stim  test5_mixed.v  test_3_hand_simulation_notes.md  test_5_hand_simulation_notes.md
.github/workflows/: ci.yml
cmake/: run_test.cmake
tests/test1_inverter/: hand_simulation_notes.md  test1_inverter.v  test1_inverter_expected.sim
tests/test2_and_or/: hand_simulation_notes.md  test2_and_or_expected.sim
tests/test3_xor_chain/: test3_xor_chain_expected.sim
tests/test4_bufif1/: hand_simulation_notes.md  test4_bufif1.v  test4_bufif1_expected.sim
tests/test5_mixed/: test5_mixed_expected.sim
